# fi_digital_signatures

./: Cargo.toml  README.md
.github/workflows/: publish-doc.yaml  publish.yaml  test.yaml
pkg/: README.md  fi_digital_signatures.d.ts  fi_digital_signatures.js  fi_digital_signatures_bg.wasm  fi_digital_signatures_bg.wasm.d.ts  package.json
src/: algorithms.rs  errors.rs  jwt.rs  lib.rs  log.rs  signer.rs  verifier.rs
src/crypto/: eddsa.rs  hmac.rs  mod.rs  rsa.rs
src/crypto/ecdsa/: _256.rs  _256k.rs  _384.rs  _512.rs  mod.rs
tests/: ec_test.rs  ecdsa_test.rs  ecdsa_wasm_test.rs  eddsa_test.rs  eddsa_wasm_test.rs  hmac_test.rs  jwt_test.rs  rsa_test.rs  rsa_wasm_test.rs
