[package]
name = "did-crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22.1"
base64-url = "3.0.0"
cose-rust-plus = "0.2.0"
ed25519-compact = { version = "2.1.1", features = ["ed25519"] }
elliptic-curve = "0.13.8"
getrandom = { version = "0.2.14", features = ["js"] }
hex = "0.4.3"
hex-literal = "0.4.1"
k256 = "0.13.3"
libsecp256k1 = "0.7.1"
p256 = "0.13.2"
p384 = "0.13.0"
p521 = "0.13.3"
pem-rfc7468 = "0.7.0"
rand = "0.8.5"
rsa = { version = "0.9.6", features = ["sha2"] }
sha2 = "0.10.8"
wasm-bindgen = "0.2.92"
x509-parser = "0.16.0"

[features]
wasm = []
