[package]
name = "did-crypto"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/fidenz-ravindu/did-crypto"
authors = ["Ravindu <ravindu.w@gmail.com"]
description = "Cryptography library for rust" 
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["cryptography", "crypto", "jwt", "sign", "verify"]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22.1"
base64-url = "3.0.0" 
chrono = "0.4.38"
ed25519-compact = { version = "2.1.1", features = ["ed25519"] }
ed25519-dalek = { version = "2.1.1", features = ["pkcs8", "pem"] }
elliptic-curve = { version = "0.13.8", features = ["pem", "pkcs8"] }
getrandom = { version = "0.2.14", features = ["js"] }
hex = "0.4.3"
hex-literal = "0.4.1"
k256 = "0.13.3"
libsecp256k1 = "0.7.1"
p256 = { version = "0.13.2", features = ["ecdsa-core", "ecdsa"] }
p384 = { version = "0.13.0", features = ["ecdsa-core"] }
p521 = { version = "0.13.3", features = ["ecdsa-core"] }
pem-parser = "0.1.1"
pem-rfc7468 = "0.7.0" 
rand = "0.8.5"
rsa = { version = "0.9.6", features = ["sha2"] }
sec1 = { version = "0.7.3", features = ["pem", "pkcs8"] }
serde = "1.0.200"
serde_json = "1.0.116"
sha2 = "0.10.8"
wasm-bindgen = "0.2.92"
x509-parser = "0.16.0"

[features]
wasm = []
