[package]
name = "fi-digital-signatures"
version = "0.0.4"
edition = "2021"
repository = "https://github.com/Fidenz/fi_digital_signatures"
authors = ["Ravindu <ravindu.w@gmail.com"]
description = "Cryptography library for rust and WASM" 
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["crypto", "jwt", "sign", "verify", "signatures"]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22.1"
base64-url = "3.0.0" 
chrono = "0.4.38" 
ed25519-dalek = { version = "2.1.1", features = ["pkcs8", "pem"] }
elliptic-curve = { version = "0.13.8", features = ["pem", "pkcs8"] }
generic-array = "1.0.0"
getrandom = { version = "0.2.14", features = ["js"] }
hex = "0.4.3" 
hmac = "0.12.1"
js-sys = "0.3.69"
k256 = "0.13.3" 
p256 = { version = "0.13.2", features = ["ecdsa-core", "ecdsa", "arithmetic"] }
p384 = { version = "0.13.0", features = ["ecdsa-core"] }
p521 = { version = "0.13.3", features = ["ecdsa-core"] } 
rand = "0.8.5"
rsa = { version = "0.9.6", features = ["sha2"] } 
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116" 
sha2 = "0.10.8"
wasm-bindgen = "0.2.92"
wasm-bindgen-test = "0.3.42"

[features]
wasm = []
